* Initial commit with a tool to interface with genesis and a network tester.
