@@ -1,0 +1,3 @@
+This folder contains the various Dockerfiles used by the project.
+
+Dockerfiles are built through a jenkins build.
